Add Card Image & try to draw image with Swing