@@ -3,28 +3,40 @@ package Controller;
 import Model.Card;
 import Model.Dealer;
 import Model.Player;
+import View.GamePanel;
 
+import javax.swing.*;
+import java.awt.*;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.jar.JarEntry;
 
 public class BlackJack {
     private ArrayList<Card> deck;
+    private Dealer dealer;
+    private Player player;
+
+    private JFrame frame;
+    private GamePanel gamePanel;
+    private JButton hitButton, stayButton, restart;
 
     public BlackJack() {
         setupGame();
+        setupUI();
     }
 
     public void setupGame() {
         buildDeck();
         shuffleDeck();
-
-        Dealer dealer = new Dealer(pickUp());
-        Player player = new Player();
+        dealer = new Dealer(pickUp());
+        player = new Player();
 
         dealer.addCard(pickUp());
 
         player.addCard(pickUp());
         player.addCard(pickUp());
+
+
         System.out.println("Dealer:");
         System.out.println(dealer.getHand());
         System.out.println(dealer.getHiddenCard());
@@ -37,6 +49,30 @@ public class BlackJack {
         System.out.println(player.getAceCount());
 
         System.out.println("Deck remaining : " + deck.size());
+    }
+
+    public void setupUI() {
+        frame = new JFrame();
+        gamePanel = new GamePanel();
+        hitButton = new JButton("Hit");
+        stayButton = new JButton("Stay");
+        restart = new JButton("Restart");
+
+        JPanel buttonPanel = new JPanel();
+        buttonPanel.add(hitButton);
+        buttonPanel.add(stayButton);
+        buttonPanel.add(restart);
+
+        frame.add(gamePanel, BorderLayout.CENTER);
+        frame.add(buttonPanel, BorderLayout.SOUTH);
+
+        frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+        frame.setSize(600, 600);
+        frame.setResizable(false);
+        frame.setVisible(true);
+
+        updateUI(false);
+
     }
 
 
@@ -55,6 +91,10 @@ public class BlackJack {
         Collections.shuffle(deck);
     }
     public Card pickUp() {
-        return deck.remove(deck.size() - 1);
+        return deck.removeLast();
+    }
+    public void updateUI(boolean showHiddenCard) {
+        gamePanel.updateUiData(dealer.getHand(), player.getHand(), dealer.getHiddenCard(), showHiddenCard);
+
     }
 }
